--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,8 @@ datasource.bankservice.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.flyway.baseline-on-migrate=true
 spring.main.allow-circular-references=true
+logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#spring.jpa.generate-ddl=true
 
+server.error.include-message = always
